export const WINGROOT = "Wingroot";
export const WINGROOT_LOGO_LABEL = "Wingroot logo";
export const PLAN_YOUR_GARDEN = "Plan your garden";
export const REGIONAL_DISCLAIMER =
  "(Plant suggestions are currently tailored for the Great Lakes region — more regions coming soon!)";
export const HELP_US_IMPROVE = "Help us improve!";
export const NEXT = "Next";
export const SOIL_MOISTURE_QUESTION =
  "Is your soil dry, moist, or wet? (Select all that apply)";
export const YES = "Yes";
export const NO = "No";
export const SUN_QUESTION =
  "Does your space get full sun, partial sun, or full shade?";
export const DEER_QUESTION = "Are deer eating your vegetation a concern?";
export const TREES_AND_SHRUBS_QUESTION =
  "Are you looking to plant trees and/or shrubs?";
export const YOUR_CUSTOMIZED_PLANTING_LIST = "Your Customized Planting List";

export const JAN = "Jan";
export const FEB = "Feb";
export const MAR = "Mar";
export const APR = "Apr";
export const MAY = "May";
export const JUN = "Jun";
export const JUL = "Jul";
export const AUG = "Aug";
export const SEP = "Sep";
export const OCT = "Oct";
export const NOV = "Nov";
export const DEC = "Dec";

export const ANNUAL = "annual";
export const BIENNIAL = "biennial";
export const PERENNIAL = "perennial";

export const FORB = "forb";
export const CACTUS = "cactus";
export const GRASS = "grass";
export const SEDGE = "sedge";
export const SHRUB = "shrub";
export const TREE = "tree";
export const VINE = "vine";

export const FULL_SUN = "full sun";
export const PARTIAL_SUN = "partial sun";
export const FULL_SHADE = "full shade";

export const LARVAL_HOST = "larval host (butterfly, moth)";
export const SPECIALIST_BEE = "supports specialist bee";
export const BENEFICIAL_INSECTS = "attracts beneficial insects";
export const BUMBLE_BEE = "bumble bee plant";
export const NEST_SITE = "nest site";
export const NEST_MATERIALS = "nest materials";
export const NEST_THATCH = "nest thatch";
export const DEER_RESISTANT = "deer resistant";

export const DRY = "dry";
export const MOIST = "moist";
export const WET = "wet";
