appId: com.joebigelow.wingroot
---
- launchApp
- tapOn: "Plan your garden"
- assertVisible: "Is your soil dry, dry to moist, moist, moist to wet, wet, dry to wet, or a combination?"
- tapOn: "Yes"
- assertVisible: "Does your space get full sun, partial sun, or shade?"
- tapOn: "Yes"
- assertVisible: "Are deer eating your vegetation a concern?"
- tapOn: "Yes"
- assertVisible: "Are you looking to plant trees and/or shrubs?"
- tapOn: "Yes"
- assertVisible: "Your Customized Planting List"
- swipe:
    direction: DOWN
- assertNotVisible: "Are you looking to plant trees and/or shrubs?"
